--- a/pirkiniu_cekis/index.html
+++ b/pirkiniu_cekis/index.html
@@ -20,11 +20,11 @@
             <h2>pirkiniai</h2>
             <table>
                 <tr>
-                    <th>Description</th>
-                    <th>Quantity</th>
-                    <th>Price</th>
-                    <th>Discount</th>
-                    <th>Full-price</th>
+                    <th>Aprasymas</th>
+                    <th>Kiekis</th>
+                    <th>Kaina</th>
+                    <th>Nuolaida</th>
+                    <th>Kaina pgal kieki</th>
                 </tr>
                 
             </table>
